--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Fedena : Open source school management system
 
 Project Fedena is the open source school management system based on Ruby on Rails. It is developed by a team of developers at Foradian Technologies. The project was made open source by Foradian, and is now maintained by the open source community. Fedena is the ideal solution for schools and campuses that want an easy means to manage all campus records.
 
-The Project Fedena website http://projectfedena.org/ is the home to the developer community behind Fedena. There you can find forums and bug tracker for Fedena.
+The Project Fedena website http://www.projectfedena.org/ is the home to the developer community behind Fedena project. There you can find forums and bug tracker for Fedena.
 
 Demo
 A demo website for Fedena has been set up at demo.projectfedena.org. You can log in with following usernames and passwords:
